--- a/scss/pages/_1030down.scss
+++ b/scss/pages/_1030down.scss
@@ -1,11 +1,11 @@
 /******************************************************************
-Site Name:
+Site Name: Migrants and Refugees
 Author:
 
 Stylesheet: Desktop Stylsheet
 
 This is the desktop size. It's larger than an iPad so it will only
-be seen on the Desktop.
+devices lower than that.
 
 ******************************************************************/
 
