--- a/scss/pages/_base.scss
+++ b/scss/pages/_base.scss
@@ -133,16 +133,37 @@ line-height: 90px;
 .popup_menu .line:after,
 .popup_menu .line:before {
     background-color: $color5 !important;
+    height: 1px;
+    width: 24px;
+}
+
+a.popup_menu {
+    &:after {
+        content: 'MENU';
+        display: inline-block;
+        color: $color5;
+        margin-left: 18px;
+        font-size: 22px;
+        top: -9px;
+        position: absolute;
+    }
+    .line {
+        &:after {
+            top: 7px;
+        }
+        &:before {
+            top: -7px;
+        }
+    }
 }
 
 .header_inner_right {
     float: left;
 }
 
-header:not(.sticky) {
-	.logo_wrapper {
-	    margin-top: 20px;
-	}
+.header_bottom {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .header_inner_left {
@@ -158,6 +179,20 @@ header:not(.sticky) {
 	}
 }
 
+.sticky .q_logo {
+    width: 185px!important;
+}
+
+.lb_drive_icon span::after {
+    content: '';
+    background: url('/wp-content/uploads/2017/03/google-drive-logo.svg') no-repeat;
+    background-size: 50px 48px;
+    height: 46px;
+    width: 50px;
+    margin-left: 25px;
+    display: inline-block;
+}
+
 
 
 /*********************
@@ -165,7 +200,7 @@ NAVIGATION STYLES
 *********************/
 
 .popup_menu_holder_inner {
-    width: 1100px;
+    width: 1300px;
     margin: 7% auto;
     display: block;
 }
@@ -190,6 +225,10 @@ nav.popup_menu {
 POSTS & CONTENT STYLES
 *********************/
 
+.content {
+    margin-top: -120px;
+}
+
 .color3_row {
     background-color: $color3;
 }
@@ -204,7 +243,7 @@ POSTS & CONTENT STYLES
 
 .lb_section_heading {
     h1 {
-        font-size: 5em;
+        font-size: 4em;
         color: $color1;
     }
     &::before {
@@ -220,7 +259,7 @@ POSTS & CONTENT STYLES
         height: 3.5em;
     }
     &.double::before {
-        height: 11em;
+        height: 8.5em;
     }
 }
 
@@ -234,7 +273,7 @@ POSTS & CONTENT STYLES
     padding-left: 30px;
     margin-top: $heading-space;
     p {
-        font-size: 1.3em;
+        font-size: 1.1em;
     }
 }
 
@@ -252,7 +291,7 @@ POSTS & CONTENT STYLES
     height: 5px;
     width: 60px;
     text-align: left;
-    box-shadow: 0 5px 0px 0 #fed766;
+    box-shadow: 0 5px 0px 0 $color3;
     border-radius: 55px;
 }
 
@@ -273,7 +312,7 @@ POSTS & CONTENT STYLES
         height: 5px;
         width: 100px;
         text-align: center;
-        box-shadow: 0 5px 0px 0 #fed766;
+        box-shadow: 0 5px 0px 0 $color3;
         border-radius: 55px;
     }
 }
