--- a/scss/pages/_homepage.scss
+++ b/scss/pages/_homepage.scss
@@ -41,6 +41,10 @@ UNIVERSAL / STYLES FOR DESKTOP
     }
 }
 
+.lb_overlap {
+    margin-bottom: -50px!important;
+}
+
 /* GRAVITY FORMS */
 #gform_submit_button_1 {
     text-align: left!important;
